# dim

./: .gitignore  Cargo.toml  README.md  cchain_git_commit.json  objective.md
examples/: vectorize_images.rs  vectorize_multiple_texts.rs  vectorize_texts.rs
src/: lib.rs  llm.rs  prelude.rs  prompt.rs  vector.rs  vectorization.rs  vectorizations.rs
src/raw_data/: utilities.rs
tests/: vector_tests.rs
