[package]
name = "dim"
version = "0.2.0"
edition = "2021"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AspadaX/dim"
description = "Vectorize data with LLM"

[dependencies]
anyhow = "1.0.93"
async-openai = "0.26.0"
base64 = "0.22.1"
futures = "0.3.31"
image = "0.25.5"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
